// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a disabled select 1`] = `
<div
  aria-disabled={true}
  aria-expanded={false}
  className="ui-select ui-select--disabled"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={undefined}
  >
    <span
      className="ui-text ui-text--size-small ui-text--weight-normal ui-text--align-unset color-navy500 hover-color-none e1q9f2xp6 css-l4muhg"
      onClick={undefined}
      style={Object {}}
    >
      Select…
    </span>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render a readonly select 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  className="ui-select ui-select--read-only"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={undefined}
  >
    <span
      className="ui-text ui-text--size-small ui-text--weight-normal ui-text--align-unset color-navy500 hover-color-none e1q9f2xp6 css-l4muhg"
      onClick={undefined}
      style={Object {}}
    >
      Select…
    </span>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render shallow component ok 1`] = `
<div
  aria-disabled={false}
  aria-expanded={false}
  className="ui-select"
  data-test="ui-select"
  onSelect={[Function]}
  open={false}
  role="menu"
>
  <div
    className="ui-select__inner"
    onClick={[Function]}
  >
    <span
      className="ui-text ui-text--size-small ui-text--weight-normal ui-text--align-unset color-navy700 hover-color-none e1q9f2xp6 css-l4muhg"
      onClick={undefined}
      style={Object {}}
    >
      Select…
    </span>
  </div>
  <div
    className="ui-select__option-group"
    data-test="ui-select__options"
    onClick={[Function]}
  >
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hertfordshire"
      onClick={[Function]}
    >
      <div>
        Hertfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Bedfordshire"
      onClick={[Function]}
    >
      <div>
        Bedfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Oxfordshire"
      onClick={[Function]}
    >
      <div>
        Oxfordshire
      </div>
    </div>
    <div
      className="ui-select__option"
      data-test="ui-select__options__option"
      name="Hampshire"
      onClick={[Function]}
    >
      <div>
        Hampshire
      </div>
    </div>
  </div>
</div>
`;
